# cross building
option('go_os', type: 'string', value: '', description: 'Go host OS')
option('go_arch', type: 'string', value: '', description: 'Go host arch')
option('sysroot', type: 'string', value: '', description: 'Cross builds sysroot')

# karaberus tests
option('s3_tests', type: 'feature', value: 'enabled', description: 'Run S3 tests')
option('network_tests', type: 'feature', value: 'enabled', description: 'Run tests that require an internet connection')

# build helpers
option('test', type: 'boolean', value: true, description: 'Build tests')
option('no_native_deps', type: 'boolean', value: false, description: 'Build without native deps')

# slow tests
option('staticcheck', type: 'boolean', value: true, description: 'Run staticcheck test')
option('errcheck', type: 'boolean', value: true, description: 'Run errcheck test')
