# cross building
option('go_os', type: 'string', value: '', description: 'Go host OS')
option('go_arch', type: 'string', value: '', description: 'Go host arch')
option('sysroot', type: 'string', value: '', description: 'Cross builds sysroot')

# karaberus tests
option('s3_tests', type: 'feature', value: 'enabled', description: 'Run S3 tests')
option('network_tests', type: 'feature', value: 'enabled', description: 'Run tests that require an internet connection')

# karaberus options
option('builtin_oidc_env', type: 'boolean', value: false, description: 'Set up a default OIDC configuration for zitadel-karaberus')
option('builtin_s3_env', type: 'boolean', value: false, description: 'Set up a default S3 configuration for gofakes3')

# build helpers
option('test', type: 'boolean', value: true, description: 'Build tests')
option('no_native_deps', type: 'boolean', value: false, description: 'Build without native deps')

# slow tests
option('staticcheck', type: 'boolean', value: true, description: 'Run staticcheck test')
option('errcheck', type: 'boolean', value: true, description: 'Run errcheck test')
