karaberus_server_files = files(
    'artists.go',
    'authors.go',
    'avtags.go',
    'cli.go',
    'db.go',
    'kara.go',
    'karaberus.go',
    'karaenv.go',
    'media.go',
    'model.go',
    'oidc.go',
    's3.go',
    'token.go',
    'upload.go',
)

karaberus_server_tests = files('karaberus_test.go')
