karaberus_server_files = files(
    'artists.go',
    'auth.go',
    'authors.go',
    'avtags.go',
    'cli.go',
    'dakara.go',
    'db.go',
    'fonts.go',
    'kara.go',
    'karaberus.go',
    'karaenv.go',
    'logger.go',
    'media.go',
    'model.go',
    'mugen.go',
    's3.go',
    'token.go',
    'upload.go',
    'user.go',
)

karaberus_server_tests = files('karaberus_test.go')

subdir('clients')
