[package]
name = "app"
version = "0.0.0"
publish = false
description = "A Tauri App"
authors = ["Japan7 <japan7@bde.enseeiht.fr>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
serde_json = "=1.0.145"
serde = { version = "=1.0.226", features = ["derive"] }
tauri = { version = "=2.8.5", features = ["devtools"] }
tauri-plugin-os = "=2.3.1"
tauri-plugin-dialog = "=2.4.0"
tauri-plugin-store = "=2.4.0"
async-std = "=1.13.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "=2.9.0"
tauri-plugin-shell = "=2.3.1"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
interprocess = "=2.2.3"
