ui_src += files(
    'components' / 'ArtistEditor.tsx',
    'components' / 'AuthorEditor.tsx',
    'components' / 'Autocomplete.tsx',
    'components' / 'AutocompleteMultiple.tsx',
    'components' / 'FileUploader.tsx',
    'components' / 'KaraCard.tsx',
    'components' / 'KaraEditor.tsx',
    'components' / 'KaraPlayer.tsx',
    'components' / 'MediaEditor.tsx',
    'components' / 'MugenImport.tsx',
    'components' / 'TokenForm.tsx',
    'layout' / 'AuthHero.tsx',
    'layout' / 'Layout.tsx',
    'layout' / 'Navbar.tsx',
    'layout' / 'ProfileDropdown.tsx',
    'layout' / 'Sidebar.tsx',
    'pages' / 'fonts' / 'browse.tsx',
    'pages' / 'karaoke' / 'browse' / '[id].tsx',
    'pages' / 'karaoke' / 'browse' / 'index.tsx',
    'pages' / 'karaoke' / 'issues.tsx',
    'pages' / 'karaoke' / 'mugen.tsx',
    'pages' / 'karaoke' / 'new.tsx',
    'pages' / 'tags' / 'artist.tsx',
    'pages' / 'tags' / 'author.tsx',
    'pages' / 'tags' / 'media.tsx',
    'pages' / 'index.tsx',
    'pages' / 'profile.tsx',
    'pages' / 'settings.tsx',
    'utils' / 'karaberus-client.ts',
    'utils' / 'session.ts',
    'App.tsx',
    'index.css',
    'index.tsx',
)
